--- a/simlane/templates/allauth/layouts/manage.html
+++ b/simlane/templates/allauth/layouts/manage.html
@@ -9,7 +9,7 @@
   {% endblock head_title %}
 {% endblock title %}
 {% block content %}
-  <div class="min-h-screen bg-gray-50 dark:bg-gray-900 py-12">
+  <div class="bg-gray-50 dark:bg-gray-900 py-12">
     <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
       <!-- Header -->
       <div class="mb-8">
