--- a/simlane/templates/sim/iracing/dashboard_content_partial.html
+++ b/simlane/templates/sim/iracing/dashboard_content_partial.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full p-6">
+<div class="w-full p-6">
   {% if active_section == 'overview' %}
     {% include "sim/iracing/dashboard_overview_partial.html" %}
   {% elif active_section == 'performance' %}
