--- a/simlane/templates/teams/club_dashboard.html
+++ b/simlane/templates/teams/club_dashboard.html
@@ -6,7 +6,7 @@
   {{ club.name }} Dashboard - SimLane
 {% endblock title %}
 {% block content %}
-  <div class="min-h-screen bg-gray-50 dark:bg-gray-900">
+  <div class="bg-gray-50 dark:bg-gray-900">
     <!-- Dashboard Header -->
     <header class="sticky top-0 z-10 bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700">
       <div class="px-4 sm:px-6 lg:px-8">
